CAmbio titulo Login

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 
 	<div class="flex-container">
 		<div>
-			<h1>Login</h1>
+			<h1>Login Prepa</h1>
 			<form action="/action_page.php">
 			  Username:<br>
 			  <input class="input" type="text" name="username" placeholder="Username">
