--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="flex-container">
 		<div>
-			<h1>Registro</h1>
+			<h1>Registro Prepa</h1>
 			<form action="/action_page.php">
 			  Username:<br>
 			  <input class="input" type="text" name="username" placeholder="Username">
