--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
 	<div class="flex-container">
 		<div>
 			<h1>Login</h1>
-			<form action="/action_page.php">
+			<form>
 			  Username:<br>
 			  <input class="input" type="text" name="username" placeholder="Username">
 			  <br>
@@ -13,11 +13,10 @@
 			</form> 
 		</div>
 	</div>
-<!--
+	<button (click)='addBook()'>Imprimir</button>
+	<h1>Books</h1>
 	<ul>
-			<h1>Books</h1>
 			<li *ngFor="let book of books | async">
-					<pre>{{ book | json }}</pre>
+					<pre>{{book.title}}</pre>
 			</li>
 	</ul>
--->
