--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,20 @@
 <div>
-    <div class="intern" *ngFor="let person of db">
-      <h3>Ficha: {{person.last_name}},{{person.first_name}}</h3>
-      <table>
+    <button (click)="agregarPersona()"> Agregar Persona Dummy</button>
+    <button *ngIf = "db.length > 1" (click)="eliminarPersona()"> Eliminar ultima Persona</button> 
+    <div>
+      <h3>Fichas: {{texto}}</h3>
+      <form #customerForm="ngForm">
+        <input type="text" class="form-control" id="texto"  required [(ngModel)]="texto" name="text"> 
+      </form>
+      <table >
         <thead>
             <tr>
+                <th>
+                    First Name
+                </th>
+                <th>
+                    Last Name
+                </th>
                 <th>
                   Email
                 </th>
@@ -16,16 +27,8 @@
               </tr>
         </thead>
         <tbody>
-        <tr>
-          <td>
-            {{person.email}}
-          </td>
-          <td>
-            {{person.gender}}
-          </td>
-          <td>
-            {{person.address}}
-          </td>
+        <tr *ngFor="let person of db">
+          <app-person [persona]="person"></app-person>
         </tr>
       </tbody>
       </table>
