--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,18 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<!DOCTYPE html>
-<html>
 	<head>
 		<title> PrepaApp</title>
 	</head>
 <body>
-  <h1>Welcome to this test Project</h1>
-  <nav>
-    <a routerLink="/login">Login</a>
-    <a routerLink="/register">Register</a>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" routerLink="/home">PrepaApp</a>
+    <a class = "nav-link" routerLink="/login">Login</a>
+    <a class = "nav-link" routerLink="/register">Register</a>
+    <a class = "nav-link" routerLink="/home">Persons</a>
   </nav>
   <router-outlet></router-outlet>
 </body>
-</html>
-
+<footer>
+  <h6>Aplicación instructiva para los alumnos de Sistemas de Información</h6>
+  <h6>Autor: GIG</h6>
+</footer>
 
