--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,25 +1,56 @@
 <div class ="container">
-    <div>
+    
         <accordion>
             <accordion-group heading="Formulario">
                 <h3>Fichas: {{texto}}</h3>
                 <form #form="ngForm" (ngSubmit)="onSubmit(form.value)">
                   <input type="text" class="form-control" id="texto"  required [(ngModel)]="texto" name="text"> 
-                  <button type="Submit" [disabled]="!form.valid" class="btn btn-secondary"> Submit</button>
+                  <button type="Submit" [disabled]="!form.valid" > Submit</button>
                 </form>
             </accordion-group>
         </accordion>
-    </div>
-    <div class="btn-group" role="group" aria-label="Basic example">
-        <button (click)="agregarPersona()" type="button" class="btn btn-secondary"> Agregar Persona Dummy</button>
-        <button *ngIf = "db.length > 1" (click)="eliminarPersona()" type="button" class="btn btn-secondary"> Eliminar ultima Persona</button> 
-        <button (click)="filtrar()" type="button" class="btn btn-secondary">Filtrar</button>
-    </div>
+      
     <div>
+       <div class="button-group">
+            <button (click)="agregarPersona()" type="button" class="btn btn-secondary"> Agregar Persona Dummy</button>
+            <button *ngIf = "db.length > 1" (click)="eliminarPersona()" type="button" class="btn btn-secondary"> Eliminar ultima Persona</button> 
+            <button (click)="filtrar()" type="button" class="btn btn-secondary">Filtrar</button>
+      </div>  
       <accordion>
           <accordion-group *ngFor="let person of filteredDb" [heading]="person.last_name.concat(',').concat(person.first_name)">
-            <app-person [persona] = "person"> </app-person>
+            <app-person [person] = "person"> </app-person>
           </accordion-group>
       </accordion>
   </div>
+  <div>
+        <button type="button" class="btn btn-primary" (click)="openModal(template)">Create template modal</button>
+ 
+        <ng-template #template>
+          <div class="modal-header">
+            <h4 class="modal-title pull-left">Modal</h4>
+            <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            This is a modal.
+            <form #form="ngForm" (ngSubmit)="onSubmit(form.value)">
+              <label>FirstName</label>
+              <input type="text" class="form-control" id="first_name"  required [(ngModel)]="first_name" name="first_name"> 
+              <label>LastName</label>
+              <input type="text" class="form-control" id="last_name"  required [(ngModel)]="last_name" name="last_name">
+              <label>Email</label>
+              <input type="text" class="form-control" id="email"  required [(ngModel)]="email" name="email">
+              <label>Gender</label>
+              <input type="text" class="form-control" id="gender"  required [(ngModel)]="gender" name="gender">
+              <label>Address</label>
+              <input type="text" class="form-control" id="address"  required [(ngModel)]="address" name="address">
+              <button type="Submit" [disabled]="!form.valid" > Submit</button>
+            </form>
+          </div>
+        </ng-template>
+
+  </div>
+
+
 </div>
