--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,7 @@
 			</form> 
 		</div>
 	</div>
-	<button (click)='addBook()'>Imprimir</button>
+	<button (click)='addBook()' class='btn btn-secondary'>Imprimir</button>
 	<h1>Books</h1>
 	<ul>
 			<li *ngFor="let book of books | async">
