--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -6,16 +6,13 @@
     height: 500px;
   }
   
-  .flex-container>div {
-        border: 5px dashed lightblue;
+  .flex-container > div {
+        border: 5px solid slategrey;
         border-radius: 10px;
         background-color: white;
         text-align: center;
         color: black;
-        width: 25%;
-        padding-bottom: 20px;
+        padding: 20px;
+        margin: 100px;
   }
   
-  .input {
-      width: 75%;
-  }
