--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -7,16 +7,28 @@
   height: 500px;
 }
 
-.flex-container>div {
-      border: 5px dashed lightblue;
+.flex-container > div {
+      border: 5px solid slategrey;
       border-radius: 10px;
       background-color: white;
       text-align: center;
       color: black;
-      width: 25%;
-      padding-bottom: 20px;
+      padding: 20px;
+      margin: 100px;
 }
 
-.input {
-    width: 75%;
+.dropzone { 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column; 
+  height: 300px;
+  border: 2px dashed #f16624;
+  border-radius: 5px;
+  background: white;
+  margin: 10px 0;
+}
+
+progress::-webkit-progress-value {
+  transition: width 0.1s ease;
 }
