--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,19 +2,81 @@
 	<div class="flex-container">
 		<div>
 			<h1>Login</h1>
-			<form #form="ngForm" (ngSubmit)="onSubmit(form.value)">
+			<form [formGroup]="loginForm">
 				<label>Email</label>
-				<input type="text" class="form-control" id="email"  required [(ngModel)]="email" name="email"> 
+				<input type="text" class="form-control"  formControlName = 'email' id="email" name="email"> 
 				<label>Password</label>
-				<input type="password" class="form-control" id="password"  required [(ngModel)]="password" name="password"> 
-				<button type="Submit" [disabled]="!form.valid" > Submit</button>
+				<input type="password" class="form-control" formControlName = 'password' id="password"  name="password"> 
+				<br>
+				<a href="register"> Aun sin cuenta? registrate! </a>
+				<br>
+				<br>
+				<button [disabled]="!loginForm.valid" (click)='onSubmit()'> Submit</button>
 			  </form>
 		</div>
+			<!-- <div>
+					<img [src]="url" width="300px" heigth='300px' alt="poke_img">
+			</div> -->
 	</div>
-	<button (click)='addBook()' class='btn btn-secondary'>Imprimir</button>
+	
+<!-- <div class="dropzone" 
+dropZone
+(hovered)="toggleHover($event)"
+(dropped)="startUpload($event)"
+[class.hovering]="isHovering">
+
+
+
+<h3>AngularFire Drop Zone</h3>
+
+<div class="file">
+   <label class="file-label">
+
+
+   <input class="file-input" type="file" (change)="startUpload($event.target.files)">
+
+
+	 <span class="file-cta">
+	   <span class="file-icon">
+		 <i class="fa fa-upload"></i>
+	   </span>
+	   <span class="file-label">
+		 or choose a file…
+	   </span>
+	 </span>
+   </label>
+ </div>
+</div>
+<div *ngIf="percentage | async as pct">
+
+	<progress class="progress is-info" 
+			  [value]="pct" 
+			  max="100">        
+	</progress>
+  
+	{{ pct | number }}%
+  
+  </div>
+  
+  
+  <div *ngIf="snapshot | async as snap">
+
+	<div *ngIf="downloadURL | async as url">
+	  <h3>Results!</h3>
+	  <img [src]="url"><br>
+	  <a [href]="url" target="_blank" rel="noopener">Download Me!</a>
+	</div> 
+  
+	<button (click)="task.pause()" class="button is-warning" [disabled]="!isActive(snap)">Pause</button>
+	<button (click)="task.cancel()" class="button is-danger" [disabled]="!isActive(snap)">Cancel</button>
+	<button (click)="task.resume()" class="button is-info"   [disabled]="!(snap?.state === 'paused')">Resume</button>
+  
+  </div> -->
+	<!--<button (click)='addBook()' class='btn btn-secondary'>Imprimir</button>
 	<h1>Books</h1>
 	<ul>
 			<li *ngFor="let book of books | async">
 					<pre>{{book.email}}</pre>
 			</li>
 	</ul>
+-->
