--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,10 +1,22 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <button>|||</button>
     <a class="navbar-brand" routerLink="/home">PrepaApp</a>
     <a class = "nav-link" routerLink="/login">Login</a>
     <a class = "nav-link" routerLink="/register">Register</a>
     <a class = "nav-link" routerLink="/home">Persons</a>
+    <a class = "nav-link" routerLink="/menu">Menu</a>
+    <div class="btn-group" dropdown placement="bottom right">
+        <button id="button-alignment" dropdownToggle type="button"
+                class="btn btn-secondary dropdown-toggle" aria-controls="dropdown-alignment">
+         {{email}} <span class="caret"></span>
+        </button>
+        <ul id="dropdown-alignment" *dropdownMenu class="dropdown-menu dropdown-menu-right"
+            role="menu" aria-labelledby="button-alignment">
+          <li role="menuitem"><a class="dropdown-item" (click)="Logout()">Logout</a></li>
+          <li class="divider dropdown-divider"></li>
+          <li role="menuitem"><a class="dropdown-item" href="#">Separated link</a></li>
+        </ul>
+      </div>
 </nav>
 <div class="container">
   <router-outlet></router-outlet>
