--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
-	<head>
-		<title> PrepaApp</title>
-	</head>
+<head>
+	<title> PrepaApp</title>
+</head>
 <body>
   <router-outlet></router-outlet>
 </body>
-<footer>
+<footer class="footer">
   <h6>Aplicación instructiva para los alumnos de Sistemas de Información</h6>
   <h6>Autor: GIG</h6>
 </footer>
