--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,26 +1,10 @@
-<div class ="container">
-    
-        <accordion>
-            <accordion-group heading="Formulario">
-                <h3>Fichas: {{texto}}</h3>
-                <form #form="ngForm" (ngSubmit)="onSubmit(form.value)">
-                  <input type="text" class="form-control" id="texto"  required [(ngModel)]="texto" name="text"> 
-                  <button type="Submit" [disabled]="!form.valid" > Submit</button>
-                </form>
-            </accordion-group>
-        </accordion>
-      
-    <div>
-       <div class="button-group">
-            <button (click)="agregarPersona()" type="button" class="btn btn-secondary"> Agregar Persona Dummy</button>
-            <button *ngIf = "db.length > 1" (click)="eliminarPersona()" type="button" class="btn btn-secondary"> Eliminar ultima Persona</button> 
-            <button (click)="filtrar()" type="button" class="btn btn-secondary">Filtrar</button>
-      </div>  
-      <accordion>
-          <accordion-group *ngFor="let person of filteredDb" [heading]="person.last_name.concat(',').concat(person.first_name)">
-            <app-person [person] = "person"> </app-person>
-          </accordion-group>
-      </accordion>
+<div class ="container">  
+  <div>
+    <accordion>
+        <accordion-group *ngFor="let person of filteredDb" [heading]="person.last_name.concat(',').concat(person.first_name)">
+          <app-person [person] = "person"> </app-person>
+        </accordion-group>
+    </accordion>
   </div>
   <div>
         <button type="button" class="btn btn-primary" (click)="openModal(template)">Create template modal</button>
@@ -28,32 +12,32 @@
         <ng-template #template>
           <div class="modal-header">
             <h4 class="modal-title pull-left">Modal</h4>
-            <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+            <button type="button" class="close pull-right" aria-label="Close" (click)="closeModal()">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
-            This is a modal.
-            <form #form="ngForm" (ngSubmit)="onSubmit(form.value)">
+            This is The Person Form.
+            <form [formGroup]="personForm">
               <label>FirstName</label>
-              <input type="text" class="form-control" id="first_name"  required [(ngModel)]="first_name" name="first_name"> 
+              <input type="text" class="form-control" id="first_name"  formControlName='first_name' name="first_name">
+              <p class="alert alert-warning" *ngIf="this.personForm.controls.first_name.touched && !personForm.controls.first_name.valid">{{getErrorMessage('first_name')}}</p>
               <label>LastName</label>
-              <input type="text" class="form-control" id="last_name"  required [(ngModel)]="last_name" name="last_name">
+              <input type="text" class="form-control" id="last_name"  formControlName='last_name' name="last_name">
+              <p class="alert alert-warning" *ngIf="this.personForm.controls.last_name.touched && !personForm.controls.last_name.valid">{{getErrorMessage('last_name')}}</p>
               <label>Email</label>
-              <input type="text" class="form-control" id="email"  required [(ngModel)]="email" name="email">
+              <p class="alert alert-warning" *ngIf="this.personForm.controls.email.touched && !personForm.controls.email.valid">{{getErrorMessage('email')}}</p>
+              <input type="text" class="form-control" id="email"  formControlName='email' name="email">
               <label>Gender</label>
-              <input type="text" class="form-control" id="gender"  required [(ngModel)]="gender" name="gender">
+              <input type="text" class="form-control" id="gender"  formControlName='gender' name="gender">
+              <p class="alert alert-warning" *ngIf="this.personForm.controls.gender.touched && !personForm.controls.gender.valid">{{getErrorMessage('gender')}}</p>
               <label>Address</label>
-              <input type="text" class="form-control" id="address"  required [(ngModel)]="address" name="address">
-              <button type="Submit" [disabled]="!form.valid" > Submit</button>
+              <input type="text" class="form-control" id="address"  formControlName='address' name="address">
+              <p class="alert alert-warning" *ngIf="this.personForm.controls.address.touched && !personForm.controls.address.valid">{{getErrorMessage('address')}}</p>
+              <button type="button-primary" style="align-self: center !important" (click)="addPerson();closeModal()" [disabled]="!personForm.valid" > Submit</button>
             </form>
           </div>
         </ng-template>
 
   </div>
-  <ul>
-			<li *ngFor="let tutor of tutor | async">
-          <pre>{{tutor}}</pre>
-			</li>
-	</ul>
 </div>
