--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -4,11 +4,22 @@
     align-content: space-between;
     align-items: center;
     align-self: center;
+    justify-content: center;
 }
 
 .card {
-    width: 250;
-    height: 250;
+    width: 250px;
+    height: auto;
     margin: 15px;
-    padding: 15px; 
+    padding: 15px;
+    text-align: justify; 
+}
+
+h5 {
+    text-align: center;
+}
+
+img{
+    width: 100%;
+    height: 50%;
 }
