--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -8,12 +8,13 @@
 }
 
 .card {
-    width: 250px;
-    height: auto;
+    width: 40%;
     margin: 15px;
     padding: 15px;
     text-align: justify; 
 }
+
+
 
 h5 {
     text-align: center;
