--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -5,6 +5,8 @@
     <a class = "nav-link" routerLink="/register">Register</a>
     <a class = "nav-link" routerLink="/home">Persons</a>
     <a class = "nav-link" routerLink="/menu">Menu</a>
+    <a class = "nav-link" routerLink="/shoppingCart">Carrito</a>
+    <a class = "nav-link" routerLink="/shoppingHistory">Historico</a>
     <div class="btn-group" dropdown placement="bottom right">
         <button id="button-alignment" dropdownToggle type="button"
                 class="btn btn-secondary dropdown-toggle" aria-controls="dropdown-alignment">
