--- a/src/app/components/shopping-cart/shopping-cart.component.css
+++ b/src/app/components/shopping-cart/shopping-cart.component.css
@@ -1,5 +1,5 @@
 .container {
-    width: 99%;
+    width: 90%;
     align-self: center;
     justify-content: center;
 }
@@ -24,6 +24,7 @@ h4 {
     display: flex;
     flex-direction: column;
     border: 10px solid blue;
+    max-width: 900px;
 }
 
 h5 {
@@ -59,9 +60,7 @@ h5 {
 
 .responsive-foodImage {
     width: 100%;
-    height: 100%;
-    min-height: 260px;
-    max-height: 100px;
+    height: 250px;
     border-bottom: 10px solid blue;
     justify-self: center;
     align-self: center;
@@ -70,17 +69,16 @@ h5 {
 
 .foodImage {
     width: 50%;
-    height: 100%;
+    height: 250px;
     border-right: 10px solid blue;
     justify-self: center;
     align-self: center;
+  
 }
 
 .buttonGroup {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
 }
 
 .buttonGroup button:first-child {
@@ -98,18 +96,13 @@ h5 {
 .btn-secondary{
     width: 20%;
 }
-
 .btn-primary{
     overflow-wrap: break-word;
-    text-align: center;
+    text-align: justify;
     border-radius: 0 !important;
     width: 60%;
 }
 
 .actions {
-    width: 33% !important;
-}
-
-.action {
     width: 50% !important;
 }
